# Matam_HW4

./: MatamStory.cpp  MatamStory.h  Untitled Diagram.drawio.xml  log.txt  main.cpp
Events/: Encounter.cpp  Encounter.h  Event.cpp  Event.h  EventFactory.h  Monster.h
Players/: Archer.cpp  Archer.h  CMakeLists.txt  Character.h  Job.cpp  Job.h  Magician.cpp  Magician.h  Monster.cpp  Monster.h  Monsters.h  Player.cpp  Player.h  PlayerFactory.cpp  Responsible.cpp  RiskTaking.cpp  Warrior.cpp  Warrior.h
